--- a/css/main.css
+++ b/css/main.css
@@ -2,10 +2,6 @@
   font-family: "comic sans ms";
   src: url(comic sans ms.ttf);
 }
-@font-face {
-  font-family: "思源黑体";
-  src: url(comic sans ms.ttf);
-}
 #Ulife_forall {
   width: 7.2rem;
   height: 100%;
@@ -32,9 +28,6 @@
   float: right!important;
   margin-right: 0.25rem!important;
 }
-.navbar::after {
-  display: none;
-}
 .home_swiper {
   width: 7.2rem;
   height: 4.05rem;
@@ -55,7 +48,7 @@
   width: 7.2rem;
   height: 0.12rem;
   background: white;
-  border-radius: 90% 90% 0 0;
+  border-radius: 100% 100% 0 0;
   position: relative;
   z-index: 5000;
   bottom: 0.12rem;
@@ -177,11 +170,54 @@
 }
 .find_searchbardiv a {
   background: white;
-  width: 6.9rem!important;
-  height: 0.59rem!important;
+  width: 6rem!important;
+  height: 0.49rem!important;
   margin: 0 auto;
-  border: 1px solid lightgray;
+  border: none;
   border-radius: 6rem;
+}
+.find_searchbardiv a i {
+  margin-left: 0.35rem;
+}
+.find_searchbardiv a span {
+  color: #666666;
+  font-size: 0.28rem;
+  margin-left: 1.5rem;
+}
+.find_subtoolbar {
+  height: 0.96rem!important;
+  border: none!important;
+  background: white!important;
+  position: fixed;
+  top: 0.96rem;
+  z-index: 5000;
+}
+.find_subtoolbar div {
+  background: white!important;
+}
+.find_subtoolbar div a {
+  margin-top: 0.23rem;
+}
+.find_subtoolbar div a span {
+  color: black;
+  font-size: 0.36rem!important;
+  opacity: 0.75;
+}
+.find_subtoolbar:after {
+  content: '';
+  position: absolute;
+  right: 0;
+  width: 100%;
+  top: 100%;
+  bottom: auto;
+  height: 10px;
+  pointer-events: none;
+  background: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 0, 0.3)), color-stop(40%, rgba(0, 0, 0, 0.1)), color-stop(50%, rgba(0, 0, 0, 0.05)), color-stop(80%, rgba(0, 0, 0, 0)), to(rgba(0, 0, 0, 0)));
+  background: -webkit-linear-gradient(top, rgba(0, 0, 0, 0.3) 0%, rgba(0, 0, 0, 0.1) 40%, rgba(0, 0, 0, 0.05) 50%, rgba(0, 0, 0, 0) 80%, rgba(0, 0, 0, 0) 100%);
+  background: linear-gradient(to bottom, rgba(0, 0, 0, 0.3) 0%, rgba(0, 0, 0, 0.1) 40%, rgba(0, 0, 0, 0.05) 50%, rgba(0, 0, 0, 0) 80%, rgba(0, 0, 0, 0) 100%);
+}
+.find_scrollcards {
+  margin-top: 0.96rem;
 }
 .find_cardheader {
   height: 5.5rem!important;
@@ -220,7 +256,7 @@
   float: left;
   margin-top: 0.1rem;
   padding-left: 0.08rem;
-  width: 5.7rem;
+  width: 5.4rem;
   font-size: 0.22rem;
   color: #666666;
 }
@@ -228,13 +264,17 @@
   margin-left: 0.2rem;
 }
 .find_cardheader .find_card-content-padding img {
-  width: 0.6rem;
-  height: 0.6rem;
+  width: 0.8rem;
+  height: 0.8rem;
   max-width: 100%;
   max-height: 100%;
   border-radius: 100%;
   color: #666666!important;
   font-size: 0.3rem;
   float: left;
-  margin-top: 0.2rem;
+}
+.myown_mydiv {
+  width: 7.2rem;
+  height: 4.05rem;
+  background: url(../test/渐变.png) no-repeat;
 }
